...
            let imageCase = UIImage(systemName: "briefcase.fill", withConfiguration: configuration)
            guard let mainViewController = assemblyBuilder?.createMainModule(router: self),
                  let balancesViewController = assemblyBuilder?.createBalancesModule(router: self)
                  else { return }
            mainNavigationController = templateNavigationController(image:
                                         imageBanknote!,
                                         tabBarItemTitle: "Курсы валют",
                                         rootViewController: mainViewController)
            
            balancesNavigationController = templateNavigationController(image:                                imageCase!,
                                         tabBarItemTitle: "Мои счета",
                                         rootViewController: balancesViewController)
            
...
